# agenda-lumiton

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: scrape.yml
calendars/: all_events.ics  centro_cultural_munro.ics  cine_york.ics  lumiton.ics
data/: all_events.csv  centro_cultural_munro.csv  cine_york.csv  lumiton.csv
docs/: index.html
scraper/: calendar_generator.py  imdb_helper.py  run.py  scraper.py
